--- a/views/about.html
+++ b/views/about.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Acerca de nosotros</h1>
+    <div>
+        <ul type = "none">
+            <li><a href="/">home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/contact">contact</a></li>
+            <li><a href="https://google.com">google</li>
+           </ul>
+    </div>
+    
+       <img src="/images/Captura de pantalla (8).png" alt="foto">
 </body>
 </html>
