--- a/views/home.html
+++ b/views/home.html
@@ -9,12 +9,54 @@
 </head>
 
 <body>
-    <h1>Bienvenidos a mi sitio web!</h1>
+    <header>
+        <h1 id= "inicio">Mi sitio web</h1>
+      <div>
+        <ul type="none">
+         <li><a href="/">home</a></li>
+         <li><a href="/about">about</a></li>
+         <li><a href="/contact">contact</a></li>
+         <li><a href="https://google.com" target="__black">google</a> </li>
+         <li><a href="#compras">Ir a compras</a></li>
+        </ul>
+      </div>
+    </header>
+
+<div>
+    <h2>Bienvenidos a mi sitio web!</h2>
     <img src="/images/Captura de pantalla (8).png" alt="">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae eveniet inventore impedit vero pariatur
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae eveniet inventore impedit vero pariatur
         beatae nemo consequatur saepe! Fugiat, asperiores corrupti eos ex quod amet quia neque possimus, placeat eum
         magni dicta veniam voluptates. Illo consequuntur, maiores itaque quod ea dignissimos autem velit, odio eum ipsa
-        sit numquam porro.</p>
+        sit numquam porro.
+    </p>
+    <h3>Tareas</h3>
+    <ol>
+        <li>Repasar la clase</li>
+        <li>Hacer el trabajo practico</li>
+        <li>Trabajar sobre el sprint</li>
+    </ol>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae eveniet inventore impedit vero pariatur
+        beatae nemo consequatur saepe! Fugiat, asperiores corrupti eos ex quod amet quia neque possimus, placeat eum
+        magni dicta veniam voluptates. Illo consequuntur, maiores itaque quod ea dignissimos autem velit, odio eum ipsa
+        sit numquam porro.
+    </p>
+    <h3 id= "compras">Compras del super</h3>
+    <ul type="square">
+        <li>Azucar</li>
+        <li>Yerba</li>
+        <li>Leche</li>
+    </ul>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae eveniet inventore impedit vero pariatur
+        beatae nemo consequatur saepe! Fugiat, asperiores corrupti eos ex quod amet quia neque possimus, placeat eum
+        magni dicta veniam voluptates. Illo consequuntur, maiores itaque quod ea dignissimos autem velit, odio eum ipsa
+        sit numquam porro.
+    </p>
+    <a href="#inicio">Ir arriba!</a>
+</div>
 </body>
 
 </html>
