--- a/views/contact.html
+++ b/views/contact.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Contactanos</h1>
+    <div>
+        <ul type = "none">
+            <li><a href="/">home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/contact">contact</a></li>
+            <li><a href="https://google.com">google</li>
+           </ul>
+    </div>
 </body>
 </html>
