maquetado de Home

--- a/views/home.html
+++ b/views/home.html
@@ -22,9 +22,49 @@
       </div>
     </header>
 
-<div>
-    <h2>Bienvenidos a mi sitio web!</h2>
-    <img src="/images/Captura de pantalla (8).png" alt="">
+<main>
+    <section>
+        <img src="/images/Captura de pantalla (8).png" alt="">
+    </section>
+    <section>
+    <h2>Ofertas</h2>
+    <article>
+        <img src="/images/81rjH-kN+kL._AC_SY550_.jpg" alt="">
+        <div>
+          <h4>Toyota AE86</h4>
+          <p>$1000</p>
+        <span>50%OFF</span>
+        <a href="Ver mas">Ver mas</a>
+        </div>
+    </article>
+    <article>
+        <img src="/images/89238179-adelaide-austrália-5-de-novembro-de-2016-um-tiro-isolado-de-um-fechado-vermelho-toyota-supra-hot-wheel.jpg" alt="">
+        <div>
+          <h4>Toyota Supra</h4>
+          <p>$1500</p>
+        <span>50%OFF</span>
+        <a href="Ver mas">Ver mas</a>
+        </div>
+    </article>
+    <article>
+        <img src="/images/915cqHV5P8L._AC_SY606_.jpg" alt="">
+        <div>
+          <h4>Mattel Whells</h4>
+          <p>$500</p>
+        <span>50%OFF</span>
+        <a href="Ver mas">Ver mas</a>
+        </div>
+    </article>
+    <article>
+        <img src="/images/Hot-Wheels-coche-de-colecci-n-de-coches-fundidos-de-Metal-para-ni-os-veh-culo.jpg" alt="">
+        <div>
+          <h4>Toyota Supra(Verde)</h4>
+          <p>$1500</p>
+        <span>50%OFF</span>
+        <a href="Ver mas">Ver mas</a>
+        </div>
+    </article>
+    </section>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae eveniet inventore impedit vero pariatur
         beatae nemo consequatur saepe! Fugiat, asperiores corrupti eos ex quod amet quia neque possimus, placeat eum
@@ -43,11 +83,13 @@
         magni dicta veniam voluptates. Illo consequuntur, maiores itaque quod ea dignissimos autem velit, odio eum ipsa
         sit numquam porro.
     </p>
-    <h3 id= "compras">Compras del super</h3>
+</main>
+    <footer>
+    <h3 id= "redes">redes sociales</h3>
     <ul type="square">
-        <li>Azucar</li>
-        <li>Yerba</li>
-        <li>Leche</li>
+        <li>Facebook</li>
+        <li>Instagram</li>
+        <li>Twitter</li>
     </ul>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quae eveniet inventore impedit vero pariatur
@@ -55,8 +97,8 @@
         magni dicta veniam voluptates. Illo consequuntur, maiores itaque quod ea dignissimos autem velit, odio eum ipsa
         sit numquam porro.
     </p>
+    </footer>
     <a href="#inicio">Ir arriba!</a>
-</div>
 </body>
 
 </html>
